package Gather;

enum GtUserMessageType {
    GT_USER_LOGIN_REQUEST = 1;
    GT_USER_LOGIN_RESPONSE = 2;
    GT_USER_LOGOUT_RESPONSE = 3;
}

message GtUserLoginRequest {
    optional string user = 1;
    optional string passwd = 2;
}

message GtUserLoginResponse {
    optional int32 result = 1;
    optional string secret = 2;
}

message GtUserLogoutResponse {
    optional int32 reason = 1;
}
